--- a/.bash-config/extensions/.dericon-alias-config
+++ b/.bash-config/extensions/.dericon-alias-config
@@ -231,26 +231,35 @@ patch() {
 
 #See: https://community.atlassian.com/t5/Jira-questions/How-to-extract-jira-issue-ticket-in-bash-script/qaq-p/2005428
 get-ticket-id() {
-   BRANCH_NAME=$(git rev-parse --abbrev-ref HEAD 2>/dev/null)
-   
-   # Ensure BRANCH_NAME is not empty and is not in a detached HEAD state (i.e. rebase).
-   # SKIP_PREPARE_COMMIT_MSG may be used as an escape hatch to disable this hook,
-   # while still allowing other githooks to run.
-   if [ ! -z "$BRANCH_NAME" ] && [ "$BRANCH_NAME" != "HEAD" ] && [ "$SKIP_PREPARE_COMMIT_MSG" != 1 ]; then   
-      PREFIX_PATTERN='[A-Z]{2,5}-[0-9]{1,4}'    
-      [[ $BRANCH_NAME =~ $PREFIX_PATTERN ]]     
-      PREFIX=${BASH_REMATCH[0]}
-      if [[ -z "${PREFIX// }" ]]; then
-          echo ""
-      else
-      echo "${PREFIX}: "   
+   local MESSAGE="$@"
+   PREFIX_PATTERN='[A-Z]{2,5}-[0-9]{1,4}'    
+   [[ $MESSAGE =~ $PREFIX_PATTERN ]]     
+   EXISTING_PREFIX=${BASH_REMATCH[0]}
+   if [[ ! -z "${EXISTING_PREFIX// }" ]]; then
+         echo ""
+   else
+      BRANCH_NAME=$(git rev-parse --abbrev-ref HEAD 2>/dev/null)
+      
+      # Ensure BRANCH_NAME is not empty and is not in a detached HEAD state (i.e. rebase).
+      # SKIP_PREPARE_COMMIT_MSG may be used as an escape hatch to disable this hook,
+      # while still allowing other githooks to run.
+      if [ ! -z "$BRANCH_NAME" ] && [ "$BRANCH_NAME" != "HEAD" ] && [ "$SKIP_PREPARE_COMMIT_MSG" != 1 ]; then   
+         [[ $BRANCH_NAME =~ $PREFIX_PATTERN ]]     
+         PREFIX=${BASH_REMATCH[0]}
+         if [[ -z "${PREFIX// }" ]]; then
+            echo ""
+         else
+            echo "${PREFIX}: "   
+         fi
       fi
    fi
+
+
 }
 
 prepare-custom-commit-message() {
    local MESSAGE="$@"
-   local TICKET=$(get-ticket-id)
+   local TICKET=$(get-ticket-id $MESSAGE)
    local CUSTOM_PREPARED_COMMIT_MESSAGE="${TICKET}${MESSAGE}"
    echo $CUSTOM_PREPARED_COMMIT_MESSAGE
 }
@@ -273,3 +282,5 @@ replacement-acp()
 	git add . && do_commit "$@" && git fetch && git status && git push
 }
 alias acp=replacement-acp
+
+alias dericon-alias="edit $HOME/.bash-config/extensions/.dericon-alias-config"
