--- a/.bash-config/extensions/.private-alias-config
+++ b/.bash-config/extensions/.private-alias-config
@@ -20,3 +20,4 @@ alias explorer="start ."
 alias edit=editor
 
 alias ls="ls -a"
+alias paka="edit $HOME/.bash-config/extensions/.private-alias-config"
